[package]
name = "solana_todo_backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "REST API backend for Solana Todo application"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-http = "3.3.1"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana dependencies
solana-sdk = "1.16.13"
solana-client = "1.16.13"
solana-program = "1.16.13"
anchor-client = "0.28.0"
anchor-lang = "0.28.0"

# Utilities
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
thiserror = "1.0.43"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.3.4", features = ["v4", "serde"] }
bs58 = "0.4.0"
base64 = "0.21.2"
jsonwebtoken = "8.3.0"
governor = "0.5.1"

# Documentation
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }

# Testing
mockall = "0.11.4"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
