[package]
name = "solana_todo_backend"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "REST API backend for Solana Todo application"

[dependencies]
# Web framework
actix-web = { version = "4.4.0", features = ["macros"] }
actix-cors = "0.6.4"
tokio = { version = "1.32.0", features = ["full", "rt-multi-thread"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# Solana dependencies
solana-sdk = "1.16.25"
solana-client = "1.16.25"
solana-program = "1.16.25"
solana-account-decoder = "1.16.25"
anchor-client = "0.28.0"
anchor-lang = "0.28.0"

# Utilities
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.4", features = ["v4", "serde"] }
bs58 = "0.5.0"
base64 = "0.21.4"
jsonwebtoken = "8.3.0"
governor = "0.5.1"

# Documentation
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }

# Testing
mockall = "0.11.4"
futures = "0.3"
async-trait = "0.1"
